病人登录逻辑写完！