@@ -16,3 +16,9 @@
     * 创建数据库：CREATE DATABASE hospitalManage;
     * 用户授权：GRANT ALL ON hospitalManage.* TO 'hospital'@'localhost';
     * 构建数据：登录用户，运行主目录下的data.sql，即：source data.sql
+   
+2. JavaFx配置：由于Java9开始，javafx从jdk中剥离了，而且引入模块化概念，使得运行javafx没有那么方便了需要加上参数
+```java
+--module-path D:\computer\java\javafx-sdk-11.0.2\lib //这是lib的位置，lib的问题需要自行解决
+--add-modules javafx.controls,javafx.fxml,com.jfoenix
+```
